[project]
name = "mapmap"
version = "0.1.0"
description = ""
authors = [
    {name = "juhong 7586",email = "juhong0422@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (<2.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
